--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.per6.quiz.EndScreen">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/view_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
